Refactor HTML structure and add call-to-action links

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                     TikTok </a>
             <a class="apresentacao__links__navegacao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">               
                Grupo WhatsApp</a>
-            </div>
-            </div>
+                </div>
+</div>
+
     <section class="bloco">
         <h2 class="apresentacao__conteudo__titulo cards__titulo">Como o Clube funciona:</h2>
         <h3 class="apresentacao__conteudo__texto">• 1 livro por mês</h3>
@@ -75,8 +76,12 @@ Você participa de um espaço onde o pensamento se encontra, se desenvolve e gan
             <p class="card__texto">Discuta os grandes dilemas existenciais e as questões éticas levantadas pelos autores, buscando sabedoria prática para a vida moderna.</p>
         </div>
     </div>
+    <div class="apresentacao__venda">
+    <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
+    </div>
     </section>
-    
+
+    <section class="bloco">
     <p class="apresentacao__conteudo__texto">A leitura, muitas vezes, é vista como uma atividade solitária. No entanto,
 compartilhar a experiência de um livro pode enriquecer imensamente sua
 jornada. É aqui que a comunidade, como o Clube Ágora, desempenha um papel
@@ -88,10 +93,7 @@ você não tivesse considerado sozinho</p>
     <img class="apresentacao__imagem__pequena" src="imagem4.jpeg" alt="foto ilustrativa">
     <img class="apresentacao__imagem__pequena" src="imagem5.jpeg" alt="foto ilustrativa">
  </div>
-
-<div class="apresentacao__venda">
-    <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
-</div>
+    </section>
 
     <section class="bloco">
        <h2 class="apresentacao__conteudo__titulo cards__titulo">Benefícios da nossa Comunidade:</h2>
@@ -129,11 +131,11 @@ você não tivesse considerado sozinho</p>
             <p class="card__beneficio__texto">Conheça o autor, sua trajetória, influências e importância no mundo da literatura em cada obra.</p>
         </div>
     </div>
-    </section>
-
     <div class="apresentacao__venda">
         <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
     </div>
+    </section>
+
 
         <p class="apresentacao__conteudo__texto apresentacao__destaque">No Clube Ágora, cada livro é uma porta para um mundo de ideias e cada conversa é uma oportunidade de crescimento intelectual. Junte-se a nós e descubra o poder transformador da leitura compartilhada! </p>
      
