Fix HTML structure and add missing sections

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <p class="apresentacao__conteudo__texto apresentacao__destaque">Se você é apaixonado por literatura, filosofia, psicologia, história ou simplesmente gosta de pensar sobre a vida, esse é o lugar certo para você! </p>
         <div class="apresentacao__venda">
         <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
-    </div>
+        </div>
+    </section>
 
+    <section class="bloco">
 <div class="apresentacao__links"> 
                 <h2 class="apresentacao__links__subtitulo">Acesse nossas redes e fique por dentro dos nossos conteúdos:</h2>
                 <div class="apresentacao__links__botoes">
@@ -39,6 +41,7 @@
                Grupo WhatsApp</a>
                 </div>
 </div>
+   </section>
 
     <section class="bloco">
         <h2 class="apresentacao__conteudo__titulo cards__titulo">Como o Clube funciona:</h2>
@@ -136,13 +139,14 @@ você não tivesse considerado sozinho</p>
     </div>
     </section>
 
-
+    <section class="bloco">
         <p class="apresentacao__conteudo__texto apresentacao__destaque">No Clube Ágora, cada livro é uma porta para um mundo de ideias e cada conversa é uma oportunidade de crescimento intelectual. Junte-se a nós e descubra o poder transformador da leitura compartilhada! </p>
      
     <div class="apresentacao__venda">
         <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Dúvidas? Fale conosco!</a>
     </div>
 </section>
+
      </main>
  <footer class="rodape">
         <p>Desenvolvido por <a class="rodape__link" href="https://instagram.com/gabriellecorteze" target="_blank">Gabrielle Corteze</a></p>
