Add copyright notice to footer

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ você não tivesse considerado sozinho</p>
 
      </main>
  <footer class="rodape">
+        <p class="rodape__texto">© 2026 Clube Ágora. Todos os direitos reservados.</p>
         <p>Desenvolvido por <a class="rodape__link" href="https://instagram.com/gabriellecorteze" target="_blank">Gabrielle Corteze</a></p>
    </footer>
 </body>
