Update Instagram link in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="apresentacao__links"> 
                 <h2 class="apresentacao__links__subtitulo">Acesse nossas redes e fique por dentro dos nossos conteúdos:</h2>
                 <div class="apresentacao__links__botoes">
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/clubeagora?igsh=MThvYjR1dzBrOHU0cQ==">               
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/clubeagora">               
                 Instagram</a>
             <a class="apresentacao__links__navegacao" href="https://www.tiktok.com/@clubeagora?_r=1&_t=ZS-93tD2nd6CBQ"> 
                     TikTok </a>
