Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <div class="apresentacao__links"> 
                 <h2 class="apresentacao__links__subtitulo">Acesse nossas redes e fique por dentro dos nossos conteúdos:</h2>
                 <div class="apresentacao__links__botoes">
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/clubeagora">               
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/clubeagora?igsh=MW1vNm1naWI4aXRkeA==">               
                 Instagram</a>
-            <a class="apresentacao__links__navegacao" href="https://www.tiktok.com/@clubeagora?_r=1&_t=ZS-93tD2nd6CBQ"> 
+                <a class="apresentacao__links__navegacao" href="https://www.tiktok.com/@clubeagora?_r=1&_t=ZS-93tD2nd6CBQ"> 
                     TikTok </a>
-            <a class="apresentacao__links__navegacao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">               
-               Grupo WhatsApp</a>
+                <a class="apresentacao__links__navegacao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">               
+                   Grupo WhatsApp</a>
                 </div>
 </div>
    </section>
