--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
         <div class="header__container"> 
             <img class="cabecalho__logo" src="cabecalho.jpeg" alt="Logo do Clube Ágora">
-            <h1 class="cabecalho__menu__escrita"> |        Comunidade de Leitura</h1>
+            <h1 class="cabecalho__menu__escrita"> |        Comunidade de Leitura VIP</h1>
         </div>
         </header>
 
@@ -26,44 +26,9 @@
     <p class="apresentacao__conteudo__texto apresentacao__destaque">Se você é apaixonado por literatura, filosofia, psicologia, história ou simplesmente gosta de pensar sobre a vida, esse é o lugar certo para você! </p>
         <div class="apresentacao__venda">
         <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
+         <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da nossa Comunidade VIP</a>
         </div>
-    </section>
-
-    <section class="bloco">
-<div class="apresentacao__links"> 
-                <h2 class="apresentacao__links__subtitulo">Acesse nossas redes e fique por dentro dos nossos conteúdos:</h2>
-                <div class="apresentacao__links__botoes">
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/clubeagora?igsh=MW1vNm1naWI4aXRkeA==">               
-                Instagram</a>
-                <a class="apresentacao__links__navegacao" href="https://www.tiktok.com/@clubeagora?_r=1&_t=ZS-93tD2nd6CBQ"> 
-                    TikTok </a>
-                <a class="apresentacao__links__navegacao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">               
-                   Grupo WhatsApp</a>
-                </div>
-</div>
-   </section>
-
-    <section class="bloco">
-        <h2 class="apresentacao__conteudo__titulo cards__titulo">Como o Clube funciona:</h2>
-        <h3 class="apresentacao__conteudo__texto">• 1 livro por mês</h3>
-            <p class="apresentacao__conteudo__texto">A cada mês selecionamos, por meio de votação, uma grande obra da literatura para leitura orientada.</p>   
-        <h3 class="apresentacao__conteudo__texto">• Você recebe o livro em PDF</h3>
-            <p class="apresentacao__conteudo__texto">Enviamos o PDF do livro para que você não precise comprar. Mas se preferir o livro físico também disponibilizamos um link para a compra pela Amazon. </p>
-        <h3 class="apresentacao__conteudo__texto">• Cronograma organizado</h3>
-            <p class="apresentacao__conteudo__texto">Você recebe um plano de leitura dividido por dias e semanas, para acompanhar sem sobrecarga.</p>
-        <h3 class="apresentacao__conteudo__texto">• Aula sobre o autor e contexto histórico</h3>
-            <p class="apresentacao__conteudo__texto">Disponibilizamos uma aula completa sobre a história de vida do autor e o contexto histórico da obra para aprofundar a compreensão do texto e enriquecer a experiência de leitura.</p>
-        <h3 class="apresentacao__conteudo__texto">• Encontros e diálogos</h3>
-            <p class="apresentacao__conteudo__texto">Realizamos encontros ao vivo para discutir a obra, compartilhar percepções e aprofundar as ideias centrais. Além de uma comunidade VIP no WhatsApp para trocar reflexões com outros participantes.</p>
-        <h3 class="apresentacao__conteudo__texto">• Resumo do livro + ensinamentos</h3>
-            <p class="apresentacao__conteudo__texto">Ao final da leitura e discussões você recebe um ebook com um resumo do livro e os ensinamentos da obra e suas aplicações no dia a dia. </p>
-        <h3 class="apresentacao__conteudo__texto">• Aulas completas sobre leitura</h3>
-            <p class="apresentacao__conteudo__texto">Você acessa aulas completas sobre psicologia, neurociência, filosofia e literatura, como: "Como ler livros?", "A importância da leitura para o cérebro", "Por que ler os clássicos?", "Atenção e Memória para leitura" e muito mais. Aulas novas são disponibilizadas a cada mês. </p>
-        <p class="apresentacao__conteudo__texto">No Clube Ágora, você não lê sozinho.
-Você participa de um espaço onde o pensamento se encontra, se desenvolve e ganha profundidade.</p>
-    </section>
-       
-    <section class="bloco">
+    </section><section class="bloco">
             <h2 class="apresentacao__conteudo__titulo cards__titulo">O que você encontrará no Clube:</h2>
     <div class="cards__container">
         <div class="card">
@@ -79,12 +44,57 @@ Você participa de um espaço onde o pensamento se encontra, se desenvolve e gan
             <p class="card__texto">Discuta os grandes dilemas existenciais e as questões éticas levantadas pelos autores, buscando sabedoria prática para a vida moderna.</p>
         </div>
     </div>
+    </section>
+
+    <section class="bloco">
+<div class="apresentacao__links"> 
+                <h2 class="apresentacao__links__subtitulo">Acesse nossas redes e fique por dentro dos nossos conteúdos:</h2>
+                <div class="apresentacao__links__botoes">
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/clubeagora">               
+                Instagram</a>
+            <a class="apresentacao__links__navegacao" href="https://www.tiktok.com/@clubeagora?_r=1&_t=ZS-93tD2nd6CBQ"> 
+                    TikTok </a>
+            <a class="apresentacao__links__navegacao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">                   
+               Grupo WhatsApp</a>
+                </div>
+</div>
+   </section>
+
+   <section class="bloco">
+     <p class="apresentacao__conteudo__texto">Dentro do Clube Ágora, existe uma Comunidade VIP com acessos a aulas e recursos exclusivos. Estando nela, você terá acesso a um grupo aberto para discussões, a uma plataforma  com vídeo aulas e ebooks preparados para receber a sua fome por conhecimento, seja sobre o livro, seja sobre a filosofia e psicologia que o rodeia.</p>
+     <h2 class="apresentacao__conteudo__titulo cards__titulo">Diferenças do Clube e da Comunidade VIP:</h2>
+    <div class="cards__grid">
+        <div class="card__beneficio">
+            <h3 class="card__beneficio__titulo">• Clube:</h3>
+            <p class="card__beneficio__texto">• Gratuito, conduzido pelas nossas redes sociais.</p>
+            <p class="card__beneficio__texto">• A cada mês selecionamos<span class="riscado"> por meio de uma votação,</span> uma grande obra da literatura para leitura orientada.</p>
+            <p class="card__beneficio__texto">• Enviamos um link de compra do livro pela Amazon.</p>
+            <p class="card__beneficio__texto"><span class="riscado">• Você recebe acesso a um plano de leitura, diretamente pelo Google Agenda, dividido por dias e semanas, para acompanhar sem sobrecarga. Também</span> será disponibilizado em PDF.</p>
+            <p class="card__beneficio__texto"><span class="riscado">• Disponibilizamos uma aula completa sobre a história de vida do autor e o contexto histórico da obra para aprofundar a compreensão do texto e enriquecer a experiência de leitura.</p></span>
+            <p class="card__beneficio__texto">• Realizamos sessões ao vivo para discutir a obra, através do TikTok e Instagram.</p>
+             <p class="card__beneficio__texto"><span class="riscado">• Ao final da leitura e discussões você recebe um ebook com um resumo do livro e os ensinamentos da obra e suas aplicações no dia a dia. </p></span>
+            <p class="card__beneficio__texto"><span class="riscado">• Você acessa aulas completas sobre psicologia, neurociência, filosofia e literatura, como: "Como ler livros?", "A importância da leitura para o cérebro", "Por que ler os clássicos?", "Atenção e Memória para leitura" e muito mais. Aulas novas são disponibilizadas a cada mês. </p></span>
+        </div>
+        <div class="card__beneficio">
+            <h3 class="card__beneficio__titulo">• Comunidade VIP:</h3>
+            <p class="card__beneficio__texto">• Investimento de R$29,90 por mês, com acessso a plataforma Kiwify.</p>
+            <p class="card__beneficio__texto">• A cada mês, por meio de uma votação, selecionamos uma grande obra da literatura para leitura orientada.</p>
+            <p class="card__beneficio__texto">• Enviamos o PDF do livro para que você não precise comprar. Mas se preferir o livro físico também disponibilizamos um link para a compra pela Amazon. </p>
+            <p class="card__beneficio__texto">• Você recebe acesso a um plano de leitura, diretamente pelo Google Agenda, dividido por dias e semanas, para acompanhar sem sobrecarga. Também será disponibilizado em PDF.</p>
+            <p class="card__beneficio__texto">• Disponibilizamos uma aula completa sobre a história de vida do autor e o contexto histórico da obra para aprofundar a compreensão do texto e enriquecer a experiência de leitura.</p>
+            <p class="card__beneficio__texto">• Realizamos encontros ao vivo para discutir a obra, compartilhar percepções e aprofundar as ideias centrais. Além de uma comunidade VIP no WhatsApp para trocar reflexões com outros participantes.</p>
+            <p class="card__beneficio__texto">• Ao final da leitura e discussões você recebe um ebook com um resumo do livro e os ensinamentos da obra e suas aplicações no dia a dia. </p>
+            <p class="card__beneficio__texto">• Você acessa aulas completas sobre psicologia, neurociência, filosofia e literatura, como: "Como ler livros?", "A importância da leitura para o cérebro", "Por que ler os clássicos?", "Atenção e Memória para leitura" e muito mais. Aulas novas são disponibilizadas a cada mês. </p>
+            </div>
+    </div>
     <div class="apresentacao__venda">
-    <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
+        <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da nossa Comunidade VIP</a>
     </div>
     </section>
 
     <section class="bloco">
+        <h2 class="apresentacao__conteudo__titulo cards__titulo">No Clube Ágora, você não lê sozinho.
+Você participa de um espaço onde o pensamento se encontra, se desenvolve e ganha profundidade</h2>
     <p class="apresentacao__conteudo__texto">A leitura, muitas vezes, é vista como uma atividade solitária. No entanto,
 compartilhar a experiência de um livro pode enriquecer imensamente sua
 jornada. É aqui que a comunidade, como o Clube Ágora, desempenha um papel
@@ -99,7 +109,7 @@ você não tivesse considerado sozinho</p>
     </section>
 
     <section class="bloco">
-       <h2 class="apresentacao__conteudo__titulo cards__titulo">Benefícios da nossa Comunidade:</h2>
+       <h2 class="apresentacao__conteudo__titulo cards__titulo">Benefícios da nossa Comunidade VIP:</h2>
     <div class="cards__grid">
         <div class="card__beneficio">
             <h3 class="card__beneficio__titulo">• Repertório</h3>
@@ -135,7 +145,7 @@ você não tivesse considerado sozinho</p>
         </div>
     </div>
     <div class="apresentacao__venda">
-        <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
+        <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da nossa Comunidade VIP</a>
     </div>
     </section>
 
