Update text for 'Comunidade VIP' in index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
     </div>
     <div class="apresentacao__venda">
-        <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da nossa Comunidade VIP</a>
+        <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da Comunidade VIP</a>
     </div>
     </section>
 
@@ -109,7 +109,7 @@ você não tivesse considerado sozinho</p>
     </section>
 
     <section class="bloco">
-       <h2 class="apresentacao__conteudo__titulo cards__titulo">Benefícios da nossa Comunidade VIP:</h2>
+       <h2 class="apresentacao__conteudo__titulo cards__titulo">Benefícios da Comunidade VIP:</h2>
     <div class="cards__grid">
         <div class="card__beneficio">
             <h3 class="card__beneficio__titulo">• Repertório</h3>
@@ -145,7 +145,7 @@ você não tivesse considerado sozinho</p>
         </div>
     </div>
     <div class="apresentacao__venda">
-        <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da nossa Comunidade VIP</a>
+        <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da Comunidade VIP</a>
     </div>
     </section>
 
