Update link text for VIP Community button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p class="apresentacao__conteudo__texto apresentacao__destaque">Se você é apaixonado por literatura, filosofia, psicologia, história ou simplesmente gosta de pensar sobre a vida, esse é o lugar certo para você! </p>
         <div class="apresentacao__venda">
         <a class="apresentacao__venda__botao" href="https://chat.whatsapp.com/L7KqlLsylLWHcyDP8slY5u?mode=gi_t">Faça parte do nosso Clube</a>
-         <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da nossa Comunidade VIP</a>
+         <a class="apresentacao__venda__botao" href="https://pay.kiwify.com.br/J80ruIa">Faça parte da Comunidade VIP</a>
         </div>
     </section><section class="bloco">
             <h2 class="apresentacao__conteudo__titulo cards__titulo">O que você encontrará no Clube:</h2>
