Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
         <div class="header__container"> 
             <img class="cabecalho__logo" src="cabecalho.jpeg" alt="Logo do Clube Ágora">
-            <h1 class="cabecalho__menu__escrita"> |        Comunidade de Leitura VIP</h1>
+            <h1 class="cabecalho__menu__escrita"> |        Comunidade de Leitura </h1>
         </div>
         </header>
 
